--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
     <h2>Meet our tutors</h2>
     <div class="grid">
       <article class="card">
-        <img class="figure" src="assets/nimit.jpg" alt="Nimit Saxena"/>
+        <img class="tutor-photo" src="assets/nimit.jpg" alt="Nimit Saxena"/>
         <h3>Nimit Saxena</h3>
         <p>Seattle University ’23 (Honors). Marketing & operations lead at Hakimo, an AI physical‑security startup. Created the popular “Catch of the Week” series (featured by Forbes in coverage of Hakimo’s growth). A detail‑oriented mentor who loves turning tough concepts into simple steps. Experience tutoring elementary math & reading, plus project‑based science.</p>
       </article>
       <article class="card">
-        <img class="figure" src="assets/julie.jpg" alt="Julie Kim"/>
+        <img class="tutor-photo" src="assets/julie.jpg" alt="Julie Kim"/>
         <h3>Julie Kim</h3>
         <p>MS, Food Science (SJSU, magna cum laude). Quality Assurance Manager in food manufacturing with a passion for hands‑on science. Meticulous, patient, and enthusiastic about nurturing curiosity. Experience leading K–5 science clubs, reading groups, and foundations in fractions & measurement.</p>
       </article>
