--- a/tutors.html
+++ b/tutors.html
@@ -36,7 +36,7 @@
     <article class="card" style="grid-column: span 12">
       <div class="grid">
         <div class="card" style="grid-column: span 4">
-          <img class="figure" src="assets/nimit.jpg" alt="Nimit Saxena portrait"/>
+          <img class="tutor-photo" src="assets/nimit.jpg" alt="Nimit Saxena portrait"/>
         </div>
         <div class="card" style="grid-column: span 8">
           <h3>Nimit Saxena</h3>
@@ -54,7 +54,7 @@
     <article class="card" style="grid-column: span 12">
       <div class="grid">
         <div class="card" style="grid-column: span 4">
-          <img class="figure" src="assets/julie.jpg" alt="Julie Kim portrait"/>
+          <img class="tutor-photo" src="assets/julie.jpg" alt="Julie Kim portrait"/>
         </div>
         <div class="card" style="grid-column: span 8">
           <h3>Julie Kim</h3>
