--- a/subjects.html
+++ b/subjects.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Subjects & Curriculum (K–5) — Evergreen Tutoring Co.</title>
   <meta name="description" content="Evergreen Tutoring Co. — Detailed, outcomes-based K–5 curriculum for Math, Science, History, and Reading/Writing with clear goals, example activities, and assessment methods."/>
+  <!-- Preload the shared logo -->
+  <link rel="preload" href="assets/logo.svg" as="image"/>
   <!-- Keep your existing site styles & scripts -->
   <link rel="stylesheet" href="css/style.css"/>
 
@@ -47,20 +49,7 @@
 <header>
   <div class="container navbar">
     <div class="nav-left">
-      <!-- Small inline mark to avoid new assets; keep or replace with your logo.svg if desired -->
-      <svg width="40" height="40" viewBox="0 0 96 96" aria-hidden="true">
-        <defs>
-          <linearGradient id="eg" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="0%" stop-color="#0F766E"/>
-            <stop offset="100%" stop-color="#065F46"/>
-          </linearGradient>
-        </defs>
-        <rect rx="12" ry="12" width="96" height="96" fill="url(#eg)"/>
-        <g transform="translate(18,18)">
-          <path d="M30 0 L60 24 L30 48 L0 24 Z" fill="#A7F3D0"/>
-          <circle cx="30" cy="24" r="10" fill="#ECFDF5"/>
-        </g>
-      </svg>
+      <img src="assets/logo.svg" alt="Evergreen Tutoring Co. logo" />
       <div class="brand">Evergreen Tutoring Co.</div>
     </div>
     <nav>
@@ -175,7 +164,7 @@
     <!-- Science -->
     <details class="curric">
       <summary class="curric-head">Science — curiosity, investigation, and clear lab habits</summary>
-      <div class="topic-grid" style="margin-top:.8rem)">
+      <div class="topic-grid" style="margin-top:.8rem">
         <div class="topic-card span-4">
           <h3>K–1 Exploration</h3>
           <p class="subhead">Outcomes: observe, ask questions, record with pictures/labels.</p>
